--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -138,7 +138,7 @@ $buttonColorHover:darken(#a1d3c2, 10%);
          * TODO get rid of this
          */
         
-        &.un-rendered:before, &.un-rendered:after {
+        &.un-rendered:before, &.un-rendered:after, .ui-view {
             content: "Button One";
             display: inline-block;
             padding: 10px 20px;
@@ -152,6 +152,11 @@ $buttonColorHover:darken(#a1d3c2, 10%);
         &.un-rendered:after {
             content: "Button Two";
         }
+        
+        .ui-view p{
+            margin:0;
+        }
+        
         
     }
     
