--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -5,6 +5,10 @@
 $buttonColor:#a1d3c2;
 $buttonColorHover:darken(#a1d3c2, 10%);
 
+
+$secondaryButtonColor: #ccc5a2;
+$secondaryButtonColorHover: darken(#ccc5a2, 10%);
+
 .header-menu {
     position: absolute;
     top: 100px;
@@ -221,6 +225,7 @@ $buttonColorHover:darken(#a1d3c2, 10%);
 
 
     .form-navigation-btns {
+        
         white-space: nowrap;
         display: inline-block;
         width: 100%;
@@ -230,8 +235,9 @@ $buttonColorHover:darken(#a1d3c2, 10%);
         padding: 20px;
         box-sizing: border-box;
         background-color: whitesmoke;
-        
-        button {
+    }
+    
+    .form-navigation-btns button, button.form-btn {
             display: inline-block;
             padding: 10px 20px;
             background-color: $buttonColor;
@@ -249,6 +255,15 @@ $buttonColorHover:darken(#a1d3c2, 10%);
                 box-shadow: 0 0 8px rgb(0 0 0 / 30%);
                 transition:background-color 0.3s, box-shadow 0.3s;
             }
+        }
+    }
+    
+    button.form-btn.secondary-btn {
+        padding: 4px 15px;
+        font-size: 17px;
+        background-color: $secondaryButtonColor;
+        &:hover{
+            background-color: $secondaryButtonColorHover;
         }
     }
     
