--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -370,7 +370,7 @@ button.inline-edit {
 .page-content, .intro-section {
     text-align:center;
     &>*{
-        text=align:left;
+        text-align:left;
     }
 }
 .page-content .ui-view.featured-stories, .intro-section .ui-view.featured-item {
