administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -375,7 +375,7 @@ button.inline-edit {
         }
     }
 }
-.page-content .ui-view.featured-stories, .intro-section .ui-view.featured-item {
+.page-content .ui-view.featured-story, .intro-section .ui-view.featured-item {
     min-width: 250px;
 }
 
