--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -238,7 +238,7 @@ $introTextColor:#4d8673;
 
 
 
-.ui-view.page-footer.un-rendered {
+.ui-view.page-footer{
     height: 300px;
     background: #3f3c3b;
     margin-top: 200px;
