administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -250,6 +250,7 @@ $introTextColor:#4d8673;
         color: white;
         font-size: 25px;
         font-weight: 100;
+        cursor:pointer;
     }
     
 }
