--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1,11 +1,11 @@
 @charset "utf-8";
 @import url("/webresources/font-awesome-4.7.0/css/font-awesome.min.css");
 
+//#a1d3c2
+$buttonColor:mediumaquamarine;
+$buttonColorHover:darken(mediumaquamarine, 10%);
 
-$buttonColor:#a1d3c2;
-$buttonColorHover:darken(#a1d3c2, 10%);
-
-
+//#ccc5a2
 $secondaryButtonColor: #ccc5a2;
 $secondaryButtonColorHover: darken(#ccc5a2, 10%);
 
