administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -522,7 +522,7 @@ button.inline-edit {
         
         button{
             
-            font-size:0
+            font-size:0;
             
             
             &:after {
