--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -523,12 +523,14 @@ button.inline-edit {
         button{
             
             font-size:0;
-            
+            border: none;
+            background: none;
             
             &:after {
                 content: "\0f105";
                 font-family: 'FontAwesome';
                 font-size: 80px;
+                color:$buttonColor;
             }
         }
     }
