administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -474,7 +474,7 @@ button.inline-edit {
         background-color: coral;
     } 
     .content.view:before{
-        background-image:url('https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/ajt_NUT_%5BImAgE%5D_%5BG%5D_0Fx-%3Ethumb%3A%3E200x%3E150.png');
+        background-image:url('https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/HgK_%5BG%5D_4pf_CU9_%5BImAgE%5D-%3Ethumb%3A%3E200x%3E150.png');
         background-color: deepskyblue;
     } 
     .content.browse:before{
