--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -646,7 +646,7 @@ button.inline-edit {
         vertical-align: bottom;
         color: coral;
     }
-    &after {
+    &:after {
         content: '”';
     }
 }
