administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -537,6 +537,8 @@ button.inline-edit {
     
     span.pagination-item.previous {
         right:unset;
+        left: -30px;
+
         button:after {
             content: "\0f104";
         }
