--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -545,35 +545,71 @@ button.inline-edit {
     }
 }
 
-.page-content .ui-view.featured-stories .featured-story{
+
+
+
+.page-content .ui-view.featured-stories{
     
-    cursor:pointer;
-    transition: background-color .8s, box-shadow .8s;
-    &:hover{
-        box-shadow: 0 0 14px rgb(0 0 0 / 30%);
-        background-color: rgba(0, 0, 0, 0.1);
-        transition: background-color .2s, box-shadow .2s;
-    }
     
-    &.adoption-card, &.journey-card {
-        border: 3px solid #ffcc02;
-        .icon {
-            background-image: url(https://sixtiesscoop.geoforms.ca/uploads-sixtiesscoop.geoforms.ca/user_files_1/Uploads/shv_[ImAgE]_d3r_[G]_g3M.png);
+    .featured-story{
+    
+        cursor:pointer;
+        transition: background-color .8s, box-shadow .8s;
+        &:hover{
+            box-shadow: 0 0 14px rgb(0 0 0 / 30%);
+            background-color: rgba(0, 0, 0, 0.1);
+            transition: background-color .2s, box-shadow .2s;
         }
-    }
-    
-    &.birth-card.featured-story {
-        border: 3px solid #5daeeb;
-        .icon {
-            background-image: url(https://sixtiesscoop.geoforms.ca/uploads-sixtiesscoop.geoforms.ca/user_files_1/Uploads/7pW_da6_[ImAgE]_[G]_noG.png);
-        }
-    }
-    
-    &.repatriation-card.featured-story {
-        border: 3px solid #fd8209;
         
-        .icon {
-            background-image: url(https://sixtiesscoop.geoforms.ca/uploads-sixtiesscoop.geoforms.ca/user_files_1/Uploads/VE4_dUd_[G]_bgL_[ImAgE].png);
+        &.adoption-card, &.journey-card {
+            border: 3px solid #ffcc02;
+            .icon {
+                background-image: url(https://sixtiesscoop.geoforms.ca/uploads-sixtiesscoop.geoforms.ca/user_files_1/Uploads/shv_[ImAgE]_d3r_[G]_g3M.png);
+            }
+        }
+        
+        &.birth-card.featured-story {
+            border: 3px solid #5daeeb;
+            .icon {
+                background-image: url(https://sixtiesscoop.geoforms.ca/uploads-sixtiesscoop.geoforms.ca/user_files_1/Uploads/7pW_da6_[ImAgE]_[G]_noG.png);
+            }
+        }
+        
+        &.repatriation-card.featured-story {
+            border: 3px solid #fd8209;
+            
+            .icon {
+                background-image: url(https://sixtiesscoop.geoforms.ca/uploads-sixtiesscoop.geoforms.ca/user_files_1/Uploads/VE4_dUd_[G]_bgL_[ImAgE].png);
+            }
+        }
+    
+    }
+
+    .FormattedTextModule.content.item-address, .FormattedTextModule.content.item-year {
+        font-size: 13px;
+        font-weight: 400;
+    }
+    
+    .FormattedTextModule.content.description-field {
+        margin-bottom: 10px;
+    }
+    
+    .FormattedTextModule.content.description-field{
+        &:before, &:after {
+            content: '“';
+            font-size: 46px;
+            line-height:0;
+            vertical-align: bottom;
+            color: coral;
+        }
+        &:after {
+            content: '”';
+        }
+    }
+    
+    .birth-card .FormattedTextModule.content.description-field{
+        &:before, &:after {
+         color: deepskyblue;
         }
     }
 
@@ -639,35 +675,6 @@ button.inline-edit {
 
 
 }
-
-.FormattedTextModule.content.item-address, .FormattedTextModule.content.item-year {
-    font-size: 13px;
-    font-weight: 400;
-}
-
-.FormattedTextModule.content.description-field {
-    margin-bottom: 10px;
-}
-
-.FormattedTextModule.content.description-field{
-    &:before, &:after {
-        content: '“';
-        font-size: 46px;
-        line-height:0;
-        vertical-align: bottom;
-        color: coral;
-    }
-    &:after {
-        content: '”';
-    }
-}
-
-.birth-card .FormattedTextModule.content.description-field{
-    &:before, &:after {
-     color: deepskyblue;
-    }
-}
-
 
 
 
