administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -87,7 +87,7 @@ $introTextColor:#4d8673;
 
 
     &:after {
-        background-image: url("https://images.squarespace-cdn.com/content/v1/5ee56dbe30c9593f5105f19c/1592244537146-K72WYV6R1FMFJ4267ZJO/60s+logo.png?format=1500w");
+        background-image: url("https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/9KX_%5BImAgE%5D_aut_%5BG%5D_Bsb.png");
         position: absolute;
         content: "";
         height: 250px;
