--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -51,7 +51,13 @@ $introTextColor:#4d8673;
 
 
 
-
+[data-view="homePageContent"] {
+    background-color: rgba(0,0,0,0.02);
+    padding-top: 20px;
+    padding-bottom: 100px;
+    border-top: 1px solid rgba(0,0,0,0.1);
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+}
 
 .site-heading {
     position: absolute;
