administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -93,7 +93,7 @@ $introTextColor:#4d8673;
 
 
     &:after {
-        background-image: url("https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/9KX_%5BImAgE%5D_aut_%5BG%5D_Bsb.png");
+        background-image: url("https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/%5BG%5D_0Zn_l8_ctO_%5BImAgE%5D-%3Ethumb%3A%3E200x%3E150.png");
         position: absolute;
         content: "";
         height: 250px;
