administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -96,11 +96,12 @@ $introTextColor:#4d8673;
         background-image: url("https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/%5BG%5D_0Zn_l8_ctO_%5BImAgE%5D-%3Ethumb%3A%3E200x%3E150.png");
         position: absolute;
         content: "";
-        height: 250px;
-        width: 250px;
+        height: 200px;
+        width: 200px;
         display: inline-block;
         background-size: cover;
-        left: 0;
+        left: 55px;
+        top: 25px;
     }
 }
 
